# lar_vision

./: CMakeLists.txt  package.xml
cfg/: camera_error_reduction.cfg  match_clouds.cfg
data/: diary.txt
data/benchmarks/segmentation/: data.txt  test.m  test.m~
data/benchmarks/tsdf_reconstruction/: results.m
data/calibrations/: asus1.yaml  asus2.yaml  cam1_depth.yaml  cam1_rgb.yaml  ideal.yml  kinect.yml
data/matlab/parma-demo/: BONMET_TEST.slx  BONMET_TEST.slx.original  GRIPPER_TEST.slx  GRIPPER_TEST.slx.autosave  parma_setup.slx  parma_setup.slx.autosave
data/matlab/parma-demo/slprj/_jitprj/: jitEngineAccessInfo.mat  s054NdIP4PFJHl9OLJXzZ3B.l  s054NdIP4PFJHl9OLJXzZ3B.mat  s17gxUPCluJ5vwpEcXTNYpH.l  s17gxUPCluJ5vwpEcXTNYpH.mat  s28UQtDQgoSboEO1ICDC26E.l  s28UQtDQgoSboEO1ICDC26E.mat  s2vjNeFA2QprWDTsVSLkqOE.l  s2vjNeFA2QprWDTsVSLkqOE.mat  s3E75LqGGEthY9kQKTpS4eF.mat  s67AiKFljNMeBI5SNldJLmB.l  s67AiKFljNMeBI5SNldJLmB.mat  s6GW402xGBtWh5JmaLUdsVE.l  s6GW402xGBtWh5JmaLUdsVE.mat  s7Oa3AUN6KuYUa8PuEbqnuG.l  s7Oa3AUN6KuYUa8PuEbqnuG.mat  sCVMdqeGiNcKOwDuoobbLBF.l  sCVMdqeGiNcKOwDuoobbLBF.mat  sDctAuOZkMQorln9WcyuJcD.l  sDctAuOZkMQorln9WcyuJcD.mat  sDt23MZlYJPhNMZCltdQRrC.l  sDt23MZlYJPhNMZCltdQRrC.mat  sEDMSUvts9T1xO3P3JBsOUB.l  sEDMSUvts9T1xO3P3JBsOUB.mat  sGhmbrmAXxF4V7z9Ox50ItB.l  sGhmbrmAXxF4V7z9Ox50ItB.mat  sH3dm8Qvb6aOUCGIv7qbWjB.l  sH3dm8Qvb6aOUCGIv7qbWjB.mat  sIu7zsY9rUkJ4Auj9b3ksFB.l  sIu7zsY9rUkJ4Auj9b3ksFB.mat  sKcnksuml5kmXl15mRnJjO.l  sKcnksuml5kmXl15mRnJjO.mat  sKoWEOn8nXf8EglJfLgux4E.l  sKoWEOn8nXf8EglJfLgux4E.mat  sLeMZvsuW9FhkfdNjmOVSUC.l  sLeMZvsuW9FhkfdNjmOVSUC.mat  sN7kBnrqvQTV22L04MRIDkB.l  sN7kBnrqvQTV22L04MRIDkB.mat  sNrGcHyEjWI3aJnjcFnecxC.l  sNrGcHyEjWI3aJnjcFnecxC.mat  (+26 more)
data/matlab/parma-demo/slprj/_sfprj/EMLReport/: 1lRlzfOxoXfjl6Xw8f5emB.mat  emlReportAccessInfo.mat  s054NdIP4PFJHl9OLJXzZ3B.mat  s17gxUPCluJ5vwpEcXTNYpH.mat  s28UQtDQgoSboEO1ICDC26E.mat  s2vjNeFA2QprWDTsVSLkqOE.mat  s3E75LqGGEthY9kQKTpS4eF.mat  s67AiKFljNMeBI5SNldJLmB.mat  s6GW402xGBtWh5JmaLUdsVE.mat  s7Oa3AUN6KuYUa8PuEbqnuG.mat  sCVMdqeGiNcKOwDuoobbLBF.mat  sDctAuOZkMQorln9WcyuJcD.mat  sDt23MZlYJPhNMZCltdQRrC.mat  sEDMSUvts9T1xO3P3JBsOUB.mat  sGhmbrmAXxF4V7z9Ox50ItB.mat  sH3dm8Qvb6aOUCGIv7qbWjB.mat  sIu7zsY9rUkJ4Auj9b3ksFB.mat  sKcnksuml5kmXl15mRnJjO.mat  sKoWEOn8nXf8EglJfLgux4E.mat  sLeMZvsuW9FhkfdNjmOVSUC.mat  sN7kBnrqvQTV22L04MRIDkB.mat  sNrGcHyEjWI3aJnjcFnecxC.mat  sTST9troO2HGOtl7BVzntLF.mat  sTUNy1KSnsjh8ZwZ9LJqE4F.mat  sWRXR1TVRgxtwg5K3rsfc4D.mat  sY574fmXHQ9lBwivrLWAjv.mat  sapkiMbXv3sye8084iYqEwG.mat  sd1yEQjLsyAsclSVDUaAXUD.mat  sdHj6KbSQXssHeXR95i6mz.mat  sdUL1t4LVrXU9eN0mRNoPCG.mat  ser8DvLtWKo45x8U84E32C.mat  shSbYztU8XKjfL2e4pG5WvE.mat  siBcm1Mr5n1RJN4DXZAtFUD.mat  snBKk137D25XIhryFUDLvjC.mat  spMLWVsNSrHGGcJntxXQpDC.mat  ssPgGXfBAcid7GUVN41nSRE.mat
data/matlab/parma-demo/slprj/_sfprj/precompile/: 0tJLgIPIwR3T89gTXN6URC.mat  1B1zJQ8wE5jaqQG3WRQTtB.mat  4MuP7xLRt6vQiBhQxjxAzF.mat  4rc5sWyTXTKFR0Hn0eBIOB.mat  5wa4ngrxjWIzD3loGHAvGG.mat  71dMxVAHTfj56T0i7xrBYF.mat  75uUnd07VtovBhXu2hjnJG.mat  76vY4jljcknO7PmgTPfKPC.mat  Aq3wlTGDkAQXTyE0S6JzMG.mat  AtfcykLoPok3DjL0DHtNmE.mat  Bh7BZaIDy21ryNmhWGrT8D.mat  DEg1jhYQT0FZJEogvFFJeD.mat  DaGE6Z67C3EM8rlcVfntrF.mat  DwiM2yWOLTNI8EjvW8BZoD.mat  Eexg9qQfgl1Dh9QlsjF3YD.mat  FAPIv5YzT8defNaJlYIifD.mat  FwU6fwrdsN5ajj0zX0d3ZB.mat  (+45 more)
data/samples/: table_top_simulated.txt
include/lar_vision/commons/: Noiser.h  lar_vision_commons.h
include/lar_vision/grasping/: Grasper.h  Slicer.h
include/lar_vision/grasping/grippers/: CrabbyGripper.h  GraspingGripper.h  Gripper.h
include/lar_vision/reconstruction/tsdf/: marching_cubes_tsdf_octree.h  octree.h  tsdf_interface.h  tsdf_volume_octree.h  tsdf_volume_octree.hpp
include/lar_vision/reconstruction/tsdf/impl/: tsdf_volume_octree.hpp
include/lar_vision/segmentation/: HighMap.h  OnePointRansac.h
lar_vision/nbproject/: configurations.xml  project.xml
lar_vision/nbproject/private/: Default.properties  configurations.xml
launch/: TESTING_segmentation_test.launch  dual_camera.launch  dual_detector.launch  height_map_segmentation.launch  marker_detector.launch  parma_setup.launch  parma_setup_sim.launch  planar_grasp_test.launch  tsdf_integration.launch
scripts/: calibrator.sh
src/commons/: Noiser.cpp  lar_vision_commons.cpp
src/grasping/: Grasper.cpp  Slicer.cpp
src/grasping/grippers/: CrabbyGripper.cpp  GraspingGripper.cpp
src/nodes/: camera_error_reduction.cpp  height_map_segmentation_rf.cpp  marker_detector.cpp  match_clouds.cpp  parma_double_set.cpp  planar_grasp_test.cpp  testing_node.cpp  tsdf_analyzer.cpp  tsdf_integration.cpp
src/nodes/testing/: segmentation_test.cpp
src/reconstruction/tsdf/: marching_cubes_tsdf_octree.cpp  octree.cpp  tsdf_interface.cpp  tsdf_volume_octree.cpp
src/segmentation/: HighMap.cpp  OnePointRansac.cpp
(+1 files in other folders)
